Link to image from Monty Python's Holy Grail

--- a/responsive/survey/style.css
+++ b/responsive/survey/style.css
@@ -5,8 +5,8 @@ body {
   color: #333;
   margin: 0;
   padding: 0;
-  background: #ffffff url('https://source.unsplash.com/ypVM8PnygUo/1920x1280') no-repeat center center;
-  background-color: rgba(255, 255, 255, 0.80);
+  background: #ffffff url('http://images.fanpop.com/images/image_uploads/Bridge-of-Death-monty-python-and-the-holy-grail-591679_800_441.jpg') no-repeat center center;
+  background-color: rgba(255, 255, 255, 0.50);
   background-blend-mode: color;
   background-size: cover;
 }
