--- a/responsive/survey/style.css
+++ b/responsive/survey/style.css
@@ -150,15 +150,15 @@ label.field {
   margin-top: .75em;
 }
 
-input:valid,
-select:valid,
-textarea:valid {
-  border: 1px solid #ccc;
+form.submitted input:valid,
+form.submitted select:valid,
+form.submitted textarea:valid {
+  border: 1px solid #0f0;
 }
 
-input:invalid,
-select:invalid,
-textarea:invalid {
+form.submitted input:invalid,
+form.submitted select:invalid,
+form.submitted textarea:invalid {
   border: 1px solid #f00;
 }
 
