--- a/responsive/survey/style.css
+++ b/responsive/survey/style.css
@@ -153,7 +153,7 @@ label.field {
 form.submitted input:valid,
 form.submitted select:valid,
 form.submitted textarea:valid {
-  border: 1px solid #0f0;
+  border: 1px solid #333;
 }
 
 form.submitted input:invalid,
