--- a/responsive/survey/style.css
+++ b/responsive/survey/style.css
@@ -115,7 +115,6 @@ select {
   background: #fff;
   width: 100%;
   font-size: 1em;
-  margin: .5em 0 1em;
   padding: 1em .75em;
   border: 1px solid #ccc;
   border-radius: 0;
@@ -126,17 +125,22 @@ select {
 
 .dropdown {
   position: relative;
+  margin: .5em 0 2em;
 }
 
 .dropdown .dropdown-options::after {
   color: #464646;
+  display: block;
+  background: white;
+  padding: .5em .3em .4em .8em;
   font-family: "Octicons";
   content: "\f0a3";
   font-size: 1.3em;
   pointer-events: none;
   position: absolute;
-  right: .5em;
-  top: 30%;
+  right: .2em;
+  top: .2em;
+  border-left: 1px solid #eee;
 }
 
 label.field {
