--- a/responsive/survey/style.css
+++ b/responsive/survey/style.css
@@ -228,7 +228,7 @@ button:active {
     max-width: 800px;
     margin: 100px auto;
     box-shadow: 0 0 10px #888;
-    border-bottom: 12px solid #131313;
+    border-top: 12px solid #131313;
   }
 
   .content:after {
