--- a/frontend/projects/calculator/style.css
+++ b/frontend/projects/calculator/style.css
@@ -46,12 +46,120 @@ button {
 }
 
 button:hover {
-  background: #000;
+  background: #222;
 }
 
 button:active {
   background: #0ac;
 }
+
+.button {
+  position: absolute;
+}
+
+#zero {
+  top: 60%;
+  left: 0;
+  width: 50%;
+}
+
+#one {
+  top: 40%;
+  left: 0;
+}
+
+#two {
+  top: 40%;
+  left: 25%;
+}
+
+#three {
+  top: 40%;
+  left: 50%;
+}
+
+#four {
+  top: 20%;
+  left: 0;
+}
+
+#five {
+  top: 20%;
+  left: 25%;
+}
+
+#six {
+  top: 20%;
+  left: 50%;
+}
+
+#seven {
+  top: 0;
+  left: 0;
+}
+
+#eight {
+  top: 0;
+  left: 25%;
+}
+
+#nine {
+  top: 0;
+  left: 50%;
+}
+
+#decimal {
+  top: 60%;
+  left: 50%;
+}
+
+#add {
+  top: 0;
+  left: 75%;
+}
+
+#subtract {
+  top: 20%;
+  left: 75%;
+}
+
+#multiply {
+  top: 40%;
+  left: 75%;
+}
+
+#divide {
+  top: 60%;
+  left: 75%;
+}
+
+#clear {
+  top: 80%;
+  left: 0;
+}
+
+#equals {
+  top: 80%;
+  left: 25%;
+  width: 75%;
+}
+
+.operator {
+  background: DarkOrange;
+}
+
+.operator:hover {
+  background: Chocolate;
+}
+
+.function {
+  background: #900;
+}
+
+.function:hover {
+  background: #600;
+}
+
 
 
 /*
