--- a/frontend/projects/pomodoro-clock/style.css
+++ b/frontend/projects/pomodoro-clock/style.css
@@ -24,20 +24,22 @@ Buttons
 
 #panel {
   position: absolute;
-  top: 20%;
+  top: 40%;
   left: 0;
   width: 100%;
-  height: 80%;
+  height: 60%;
 }
 
-button {
-  font-size: 2em;
+button,
+.duration {
+  font-size: 1.5em;
+  text-align: center;
   color: #fff;
   background: #444;
   display: block;
   width: 25%;
-  height: 20%;
-  float: left;
+  height: 25%;
+  position: absolute;
   margin: 0;
   padding: .5em .75em;
   border-radius: 0;
@@ -59,25 +61,80 @@ button:focus {
   outline: 0;
 }
 
-.button {
-  position: absolute;
+#session-decrement {
+  top: 12.5%;
+  left: 0;
+  width: 25%;
 }
 
-#zero {
-  top: 60%;
+#session-increment {
+  top: 12.5%;
+  left: 75%;
+  width: 25%;
+}
+
+#break-decrement {
+  top: 50%;
+  left: 0;
+  width: 25%;
+}
+
+#break-increment {
+  top: 50%;
+  left: 75%;
+  width: 25%;
+}
+
+#start_stop {
+  top: 75%;
+  left: 50%;
+  width: 50%;
+}
+
+#reset {
+  top: 75%;
   left: 0;
   width: 50%;
 }
 
-#one {
-  top: 40%;
-  left: 0;
-}
-
-.operator,
-.calculate {
+.addition {
   font-size: 2em;
   padding-top: .3em;
+}
+
+label {
+  font-size: .9em;
+  text-align: center;
+  text-transform: uppercase;
+  color: #666;
+  background: #222;
+  display: block;
+  width: 100%;
+  height: 12.5%;
+  position: absolute;
+  margin: 0;
+  padding: .7em .75em;
+  box-sizing: border-box;
+}
+
+#break-label {
+  top: 37.5%;
+}
+
+.duration {
+  top: 0;
+  left: 25%;
+  width: 50%;
+  font-size: 2em;
+  padding-top: .7em;
+}
+
+#session-length {
+  top: 12.5%;
+}
+
+#break-length {
+  top: 50%;
 }
 
 .operator {
@@ -124,15 +181,15 @@ Display
 
 #display {
   font-weight: normal;
-  font-size: 2em;
+  font-size: 6em;
   color: #fff;
   background: #000;
-  text-align: right;
+  text-align: center;
   margin: 0;
-  padding: 1em 1em;
+  padding: .5em;
   position: absolute;
   width: 100%;
-  height: 20%;
+  height: 40%;
   top: 0;
   right: 0;
   box-sizing: border-box;
@@ -148,11 +205,5 @@ Display
   button {
     font-size: 3em;
   }
-
-  .operator,
-  .calculate {
-    font-size: 4.5em;
-  }
-
 
 }
