--- a/frontend/projects/pomodoro-clock/style.css
+++ b/frontend/projects/pomodoro-clock/style.css
@@ -47,6 +47,9 @@ button,
   box-sizing: border-box;
   -webkit-appearance: none;
   -moz-appearance: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 button:hover {
@@ -108,17 +111,20 @@ label {
   text-transform: uppercase;
   color: #666;
   background: #222;
-  display: block;
   width: 100%;
   height: 12.5%;
   position: absolute;
   margin: 0;
   padding: .7em .75em;
   box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #timer-label {
   top: 3%;
+  height: auto;
   z-index: 2;
   background: none;
 }
@@ -199,13 +205,15 @@ Display
   top: 0;
   right: 0;
   box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-
 
 @media (min-width: 600px) {
 
   #display {
-    font-size: 5em;
+    font-size: 8em;
   }
 
   button {
