--- a/frontend/projects/calculator/style.css
+++ b/frontend/projects/calculator/style.css
@@ -45,6 +45,9 @@ button {
   box-sizing: border-box;
   -webkit-appearance: none;
   -moz-appearance: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 button:hover {
@@ -246,8 +249,17 @@ Display
 }
 
 #display {
-  height: 20%;
-  padding: .3em 1em;
+  height: 25%;
+  padding: .5em 1em;
+}
+
+.operator {
+  padding: 0 .75em;
+}
+
+#panel {
+  top: 25%;
+  height: 75%;
 }
 
 button {
