--- a/frontend/projects/calculator/style.css
+++ b/frontend/projects/calculator/style.css
@@ -39,7 +39,7 @@ button {
   height: 20%;
   float: left;
   margin: 0;
-  padding: .5em .75em;
+  padding: 0;
   border-radius: 0;
   border: 1px solid #000;
   box-sizing: border-box;
@@ -157,8 +157,8 @@ button:focus {
 
 .operator,
 .calculate {
-  font-size: 2em;
-  padding-top: .3em;
+  font-size: 2.4em;
+  padding-bottom: .2em;
 }
 
 .operator {
@@ -213,13 +213,16 @@ Display
   background: #000;
   text-align: right;
   margin: 0;
-  padding: 1em 1em;
+  padding: 0 1em;
   position: absolute;
   width: 100%;
   height: 20%;
   top: 0;
   right: 0;
   box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
 }
 
 
@@ -242,7 +245,6 @@ Display
 
 @media (orientation: landscape) {
 
-#display,
 .operator,
 .calculate {
   font-size: 2em;
@@ -250,11 +252,7 @@ Display
 
 #display {
   height: 25%;
-  padding: .5em 1em;
-}
-
-.operator {
-  padding: 0 .75em;
+  font-size: 2em;
 }
 
 #panel {
