--- a/frontend/projects/calculator/style.css
+++ b/frontend/projects/calculator/style.css
@@ -19,195 +19,12 @@ body {
 
 /*
 ------------------------------------
-Buttons
------------------------------------- */
-
-#panel {
-  position: absolute;
-  top: 20%;
-  left: 0;
-  width: 100%;
-  height: 80%;
-}
-
-button {
-  font-size: 2em;
-  color: #fff;
-  background: #444;
-  display: block;
-  width: 25%;
-  height: 20%;
-  float: left;
-  margin: 0;
-  padding: 0;
-  border-radius: 0;
-  border: 1px solid #000;
-  box-sizing: border-box;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-button:hover {
-  background: #333;
-}
-
-button.select,
-button:active {
-  background: #222;
-}
-
-button:focus {
-  outline: 0;
-}
-
-.button {
-  position: absolute;
-}
-
-#zero {
-  top: 60%;
-  left: 0;
-  width: 50%;
-}
-
-#one {
-  top: 40%;
-  left: 0;
-}
-
-#two {
-  top: 40%;
-  left: 25%;
-}
-
-#three {
-  top: 40%;
-  left: 50%;
-}
-
-#four {
-  top: 20%;
-  left: 0;
-}
-
-#five {
-  top: 20%;
-  left: 25%;
-}
-
-#six {
-  top: 20%;
-  left: 50%;
-}
-
-#seven {
-  top: 0;
-  left: 0;
-}
-
-#eight {
-  top: 0;
-  left: 25%;
-}
-
-#nine {
-  top: 0;
-  left: 50%;
-}
-
-#decimal {
-  top: 60%;
-  left: 50%;
-}
-
-#add {
-  top: 60%;
-  left: 75%;
-}
-
-#subtract {
-  top: 40%;
-  left: 75%;
-}
-
-#multiply {
-  top: 20%;
-  left: 75%;
-}
-
-#divide {
-  top: 0;
-  left: 75%;
-}
-
-#clear {
-  top: 80%;
-  left: 0;
-}
-
-#equals {
-  top: 80%;
-  left: 25%;
-  width: 75%;
-}
-
-.operator,
-.calculate {
-  font-size: 2.4em;
-  padding-bottom: .2em;
-}
-
-.operator {
-  background: DodgerBlue;
-}
-
-.operator:hover {
-  background: #06c;
-}
-
-.operator.select,
-.operator:active {
-  background: #004d99;
-}
-
-.calculate {
-  background: DarkOrange;
-}
-
-.calculate:hover {
-  background: #cc7000;
-}
-
-.calculate.select,
-.calculate:active {
-  background: #995400;
-}
-
-.function {
-  background: Red;
-}
-
-.function:hover {
-  background: #c00;
-}
-
-.function.select,
-.function:active {
-  background: #900;
-}
-
-
-/*
-------------------------------------
 Display
 ------------------------------------ */
 
 #display {
   font-weight: normal;
-  font-size: 2em;
+  font-size: 2.5em;
   color: #fff;
   background: #000;
   text-align: right;
@@ -215,7 +32,7 @@ Display
   padding: 0 1em;
   position: absolute;
   width: 100%;
-  height: 20%;
+  height: 25%;
   top: 0;
   right: 0;
   box-sizing: border-box;
@@ -225,44 +42,47 @@ Display
 }
 
 
-@media (min-width: 600px) {
-
-  #display {
-    font-size: 5em;
-  }
-
-  button {
-    font-size: 3em;
-  }
-
-  .operator,
-  .calculate {
-    font-size: 4.5em;
-  }
-
-}
-
-@media (orientation: landscape) {
-
-.operator,
-.calculate {
-  font-size: 2em;
-}
-
-#display {
-  height: 25%;
-  font-size: 2em;
-}
+/*
+------------------------------------
+Buttons
+------------------------------------ */
 
 #panel {
+  position: absolute;
   top: 25%;
+  left: 0;
+  width: 100%;
   height: 75%;
 }
 
 button {
+  font-size: 2em;
+  display: block;
+  width: 25%;
+  height: 20%;
+  float: left;
+  margin: 0;
+  padding: 0;
+  border-radius: 0;
+  box-sizing: border-box;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button {
+  position: absolute;
   width: 20%;
   height: 25%;
   font-size: 1.6em;
+}
+
+.operator,
+.calculate {
+  font-size: 2.4em;
+  padding-bottom: .2em;
 }
 
 #zero {
@@ -352,5 +172,197 @@ button {
   width: 20%;
   height: 75%;
 }
+
+
+/*
+------------------------------------
+Color
+------------------------------------ */
+
+button {
+  color: #fff;
+  background: #444;
+  border: 1px solid #000;
+}
+
+button:hover {
+  background: #333;
+}
+
+button.select,
+button:active {
+  background: #222;
+}
+
+button:focus {
+  outline: 0;
+}
+
+.operator {
+  background: DodgerBlue;
+}
+
+.operator:hover {
+  background: #06c;
+}
+
+.operator.select,
+.operator:active {
+  background: #004d99;
+}
+
+.calculate {
+  background: DarkOrange;
+}
+
+.calculate:hover {
+  background: #cc7000;
+}
+
+.calculate.select,
+.calculate:active {
+  background: #995400;
+}
+
+.function {
+  background: Red;
+}
+
+.function:hover {
+  background: #c00;
+}
+
+.function.select,
+.function:active {
+  background: #900;
+}
+
+
+/*
+------------------------------------
+Media Queries
+------------------------------------ */
+
+@media (orientation: portrait) {
+
+  #display {
+    height: 20%;
+  }
+
+  #panel {
+    top: 20%;
+    height: 80%;
+  }
+
+  .button {
+    position: absolute;
+    width: 25%;
+    height: 20%;
+  }
+
+  #zero {
+    top: 60%;
+    left: 0;
+    width: 50%;
+  }
+
+  #one {
+    top: 40%;
+    left: 0;
+  }
+
+  #two {
+    top: 40%;
+    left: 25%;
+  }
+
+  #three {
+    top: 40%;
+    left: 50%;
+  }
+
+  #four {
+    top: 20%;
+    left: 0;
+  }
+
+  #five {
+    top: 20%;
+    left: 25%;
+  }
+
+  #six {
+    top: 20%;
+    left: 50%;
+  }
+
+  #seven {
+    top: 0;
+    left: 0;
+  }
+
+  #eight {
+    top: 0;
+    left: 25%;
+  }
+
+  #nine {
+    top: 0;
+    left: 50%;
+  }
+
+  #decimal {
+    top: 60%;
+    left: 50%;
+  }
+
+  #add {
+    top: 60%;
+    left: 75%;
+  }
+
+  #subtract {
+    top: 40%;
+    left: 75%;
+  }
+
+  #multiply {
+    top: 20%;
+    left: 75%;
+  }
+
+  #divide {
+    top: 0;
+    left: 75%;
+  }
+
+  #clear {
+    top: 80%;
+    left: 0;
+  }
+
+  #equals {
+    top: 80%;
+    left: 25%;
+    width: 75%;
+    height: 20%;
+  }
+
+}
+
+@media (min-width: 600px) {
+
+  #display {
+    font-size: 5em;
+  }
+
+  .button {
+    font-size: 3em;
+  }
+
+  .operator,
+  .calculate {
+    font-size: 4.5em;
+  }
 
 }
