Remove rounded corners from editor on iOS

--- a/frontend/projects/markdown-previewer/style.css
+++ b/frontend/projects/markdown-previewer/style.css
@@ -286,6 +286,8 @@ textarea {
   -webkit-font-smoothing: antialiased;
   -moz-font-smoothing: antialiased;
   -o-font-smoothing: antialiased;
+  -webkit-border-radius:0;
+  border-radius:0;
 }
 
 /*
