--- a/frontend/projects/random-quote-machine/style.css
+++ b/frontend/projects/random-quote-machine/style.css
@@ -178,6 +178,15 @@ Media Queries
 
 }
 
+@media (orientation: landscape) {
+
+  #panel {
+    top: 80%;
+    height: 20%;
+  }
+
+}
+
 @media (min-width: 750px) {
 
   #display {
