Turn off color for buttons

--- a/frontend/projects/random-quote-machine/style.css
+++ b/frontend/projects/random-quote-machine/style.css
@@ -138,6 +138,7 @@ Color
   outline: 0;
 }
 
+/*
 #tweet-quote {
   background: DodgerBlue;
 }
@@ -163,6 +164,7 @@ Color
 #new-quote:active {
   background: #008000;
 }
+*/
 
 
 /*
