--- a/responsive/gallery-ui/style.css
+++ b/responsive/gallery-ui/style.css
@@ -1,21 +1,24 @@
+/*
+====================================
+
+Gallery UI CSS
+
+====================================
+*/
+
 body {
   left: 0;
   margin: 0;
-  overflow: hidden;
   position: relative;
   font-family: Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-.menu {
-  background: #222;
-  left: -320px;
-  height: 100%;
-  position: fixed;
-  width: 320px;
-}
-
+/*
+------------------------------------
+Content
+------------------------------------ */
 .content {
 /*
   background-image: url('https://source.unsplash.com/hZIuMF2E2-g/1920x1280');
@@ -26,6 +29,19 @@ body {
   background-size: cover;
   */
   background: #eee;
+}
+
+/*
+------------------------------------
+Menu
+------------------------------------ */
+.menu {
+  background: #222;
+  left: -320px;
+  height: 100%;
+  position: fixed;
+  width: 320px;
+  z-index: 10;
 }
 
 .menu ul {
@@ -59,14 +75,26 @@ body {
   background: DodgerBlue;
 }
 
+/*
+------------------------------------
+Buttons
+------------------------------------ */
 .close-button,
 .menu-button {
   color: #999;
   cursor: pointer;
   font-size: 16px;
   padding: 25px 25px 25px 65px;
+  height: 68px;
+  box-sizing: border-box;
   text-decoration: none;
   text-transform: uppercase;
+}
+
+.menu-button {
+  position: fixed;
+  width: 100%;
+  z-index: 5;
 }
 
 .close-button {
@@ -110,4 +138,85 @@ body {
 
 .open .menu-button .icon {
   fill: #ccc;
+}
+
+
+/*
+------------------------------------
+Gallery
+------------------------------------
+Adapted from Codrops
+https://tympanus.net/codrops/2012/04/09/direction-aware-hover-effect-with-css3-and-jquery/
+------------------------------------
+*/
+.gallery {
+  padding-top: 68px;
+}
+
+.da-thumbs {
+  list-style: none;
+  width: 100%;
+  position: relative;
+  margin: 0;
+  padding: 0;
+}
+.da-thumbs li {
+  background: #fff;
+  position: relative;
+  width: 100%;
+}
+.da-thumbs li a,
+.da-thumbs li a img {
+  display: block;
+  width: 100%;
+  position: relative;
+}
+.da-thumbs li a img {
+  max-width: 100%;
+}
+.da-thumbs li a {
+  overflow: hidden;
+}
+.da-thumbs li a div {
+  position: absolute;
+  background: #333;
+  background: rgba(30,144,255,0.9);
+  width: 100%;
+  height: 100%;
+}
+.da-thumbs li a div span {
+  display: block;
+  padding: 30px;
+  font-weight: normal;
+  color: rgba(255,255,255,0.9);
+}
+
+
+/*
+------------------------------------
+Media Queries
+------------------------------------ */
+@media (min-width: 750px) {
+
+  .da-thumbs li {
+    float: left;
+    width: 50%;
+  }
+
+}
+
+@media (min-width: 1024px) {
+
+  .da-thumbs li {
+    width: 33.33333333%;
+  }
+
+}
+
+@media (min-width: 1400px) {
+
+  .da-thumbs li {
+    width: 25%;
+  }
+
 }
