Sass: Nest CSS with Sass

--- a/frontend/sass/src/scss/style.scss
+++ b/frontend/sass/src/scss/style.scss
@@ -1,7 +1,10 @@
-$text-color: red;
-.header {
-  text-align: center;
+.blog-post {
+
 }
-.blog-post, h2 {
-  color: $text-color;
+h1 {
+  text-align: center;
+  color: blue;
+}
+p {
+  font-size: 20px;
 }
