Sass: Create Reusable CSS with Mixins

--- a/frontend/sass/src/scss/style.scss
+++ b/frontend/sass/src/scss/style.scss
@@ -1,9 +1,6 @@
-.blog-post {
-  h1 {
-    text-align: center;
-    color: blue;
-  }
-  p {
-    font-size: 20px;
-  }
+#awesome {
+  width: 150px;
+  height: 150px;
+  background-color: green;
+
 }
