--- a/frontend/sass/src/scss/style.scss
+++ b/frontend/sass/src/scss/style.scss
@@ -1,2 +1,8 @@
-// The main.scss file
-@import 'variables'
+h3{
+  text-align: center;
+}
+.info{
+  width: 200px;
+  border: 1px solid black;
+  margin: 0 auto;
+}
