Use body-parser to retrieve POST data

--- a/views/shorturl.html
+++ b/views/shorturl.html
@@ -12,7 +12,7 @@
    <body>
       <div class="container">
         <h2>API Project: URL Shortener Microservice</h2>
-        <form action="api/shorturl/new" method="POST">
+        <form action="/api/shorturl/new" method="POST">
           <label for="url_input">URL to be shortened</label>
           <input id="url_input" type="text" name="url" value="https://www.freecodecamp.org">
           <input type="submit" value="POST URL">
